Har lavet UI til sign up og log in

--- a/BlazorWebsite/Components/Pages/CreateOrder.razor
+++ b/BlazorWebsite/Components/Pages/CreateOrder.razor
@@ -45,7 +45,8 @@
                 <h6 class="red-text">Specificer en type lastvogn der skal levere varen</h6>
                 <input type="text" class="input" @bind-value="CreatedOrder.TruckType.Trucktype" />
             </div>
-        }        <div class="btn-container">
+        }        
+        <div class="btn-container">
             <button class="btn">Gå tilbage</button>
             <button class="btn" @onclick="SubmitOrder">Oprete ordren</button>
         </div>
