Log in og sign up færdiggjort, men mangler nogle små ændringer

--- a/BlazorWebsite/Components/Pages/SignUp.razor
+++ b/BlazorWebsite/Components/Pages/SignUp.razor
@@ -36,7 +36,7 @@
         }
         <div class="btn-container">
             <button class="btn">Gå til log in</button>
-            <button class="btn">Opret konto</button>
+            <button class="btn" @onclick="SignUserUp">Opret konto</button>
         </div>
     </div>
 </div>
