--- a/BlazorWebsite/Components/Pages/LogIn.razor
+++ b/BlazorWebsite/Components/Pages/LogIn.razor
@@ -7,20 +7,17 @@
         <h2 class="headeer-text">Velkommen, log in her</h2>
     </div>
     <div class="foreground">
-        @if (user != null)
-        {
-            <div class="input-container">
-                <h6 class="red-text">Din mail</h6>
-                <input type="text" class="input" @bind-value="user.UserInfo.Email" />
-            </div>
-            <div class="input-container">
-                <h6 class="red-text">Et kodeord</h6>
-                <input type="password" class="input" @bind-value="user.UserCredentials.Password" />
-            </div>
-        }
+        <div class="input-container">
+            <h6 class="red-text">Din mail</h6>
+            <input type="text" class="input" @bind-value="mail" />
+        </div>
+        <div class="input-container">
+            <h6 class="red-text">Et kodeord</h6>
+            <input type="password" class="input" @bind-value="password" />
+        </div>
         <div class="btn-container">
             <button class="btn">Gå til sign up</button>
-            <button class="btn">Log in</button>
+            <button class="btn" @onclick="LogUserInAsync">Log in</button>
         </div>
     </div>
 </div>
