--- a/MauiApp1/Views/FindOrder.xaml
+++ b/MauiApp1/Views/FindOrder.xaml
@@ -81,7 +81,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="50"/>
                     </Grid.ColumnDefinitions>
-                    <Button Grid.Column="1" ImageSource="logout.png" Command="{Binding ratings}" Style="{StaticResource FooterButton}"/>
+                    <Button Grid.Column="1" ImageSource="star.png" Command="{Binding ratings}" Style="{StaticResource FooterButton}"/>
                     <Button Grid.Column="2" ImageSource="profile.png" Command="{Binding profile}" Style="{StaticResource FooterButton}"/>
                     <Button Grid.Column="3" ImageSource="market.png" Command="{Binding home}" Style="{StaticResource FooterButton}"/>
                     <Button Grid.Column="4" ImageSource="logout.png" Command="{Binding logout}" Style="{StaticResource FooterButton}"/>
