--- a/MauiApp1/AppShell.xaml
+++ b/MauiApp1/AppShell.xaml
@@ -17,5 +17,8 @@
     <ShellContent
         ContentTemplate="{DataTemplate view:Signup}"
         Route="Signup" />
+    <ShellContent
+        ContentTemplate="{DataTemplate view:Profile}"
+        Route="Profile" />
 
 </Shell>
