Har lavet lidt mere på profil siden, og tilføjet nogle cookies til hjemmesiden som ikke virker

--- a/BlazorWebsite/Components/_Imports.razor
+++ b/BlazorWebsite/Components/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorWebsite
 @using BlazorWebsite.Components
+@inject IJSRuntime JS
+@inject NavigationManager navigationManager
