--- a/BlazorWebsite/Components/Layout/MainLayout.razor
+++ b/BlazorWebsite/Components/Layout/MainLayout.razor
@@ -8,6 +8,12 @@
     </main>
 </div>
 
+<script>
+    var script = document.createElement('script');
+    script.src = 'localStorage.js';
+    document.head.appendChild(script);
+</script>
+
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
