Færdiggjort profile siden og lavet UI til en bruger kan ændre deres oplysninger

--- a/BlazorWebsite/Components/Layout/MainLayout.razor.css
+++ b/BlazorWebsite/Components/Layout/MainLayout.razor.css
@@ -1,6 +1,7 @@
 .layout-container {
     background-image: linear-gradient(to right, #C32424, #2E0148);
     min-height: 100vh;
+    overflow: auto;
 }
 .page {
     position: relative;
