--- a/BlazorWebsite/Components/Pages/CreateOrder.razor
+++ b/BlazorWebsite/Components/Pages/CreateOrder.razor
@@ -1,6 +1,7 @@
 ﻿@page "/CreateOrder"
 @rendermode InteractiveServer
 
+<PageTitle>Opret ordre</PageTitle>
 
 <div class="container">
     <div class="header">
@@ -48,7 +49,7 @@
         }        
         <div class="btn-container">
             <button class="btn">Gå tilbage</button>
-            <button class="btn" @onclick="SubmitOrder">Oprete ordren</button>
+            <button class="btn" @onclick="SubmitOrder">Opret ordren</button>
         </div>
     </div>
     
