--- a/BlazorWebsite/Components/Pages/Home.razor
+++ b/BlazorWebsite/Components/Pages/Home.razor
@@ -23,10 +23,10 @@
                             <img src="https://plugins.shopware-staging.overdose.digital/thumbnail/d3/e3/a5/1690970711/test%20%281%29_1920x1920.png" />
                         </div>
                         <div class="left-info-container">
-                            <div class="">
+                            <div class="top-container">
                                 <p>@activeOrders[i].Description</p>
                             </div>
-                            <div class="">
+                            <div class="bottom-container">
                                 <p>Fra @activeOrders[i].Address</p>
                                 <p>Til @activeOrders[i].Destination</p>
                                 <p>Leverings dato: @activeOrders[i].ExpirationDate.Date</p>
