--- a/BlazorWebsite/Components/Layout/MainLayout.razor
+++ b/BlazorWebsite/Components/Layout/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page" style="background-color: darkblue">
+<div class="page">
     <main>
         <div class="layout-container">
             @Body
