--- a/BlazorWebsite/Components/Pages/Home.razor.css
+++ b/BlazorWebsite/Components/Pages/Home.razor.css
@@ -36,9 +36,7 @@
     border-radius: 50px;
     margin-bottom: 3%;
 }
-.foreground :last-child {
-    width: 100%;
-}
+
 img {
     height: 100%;
     width: 30vh;
@@ -62,15 +60,21 @@ p {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
+    width: 100%;
+    margin-right: 50px;
 }
-.top-container {
+
+.right-top-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-end;
 }
+.top-container {
+    margin-top: 10px;
+}
 .bottom-container {
-
+    margin-bottom: 10px;
 }
 
 .input-container {
