--- a/MauiApp1/Resources/Styles/SettingsStyle.xaml
+++ b/MauiApp1/Resources/Styles/SettingsStyle.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Resources.Styles.ProfileStyle">
-    
+             x:Class="MauiApp1.Resources.Styles.SettingsStyle">
+
     <Style TargetType="Grid" x:Key="Background">
         <Setter Property="Background">
             <Setter.Value>
@@ -13,23 +13,40 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style TargetType="Border" x:Key="CollectionBorder">
+    <Style TargetType="Border" x:Key="BorderBackground">
         <Setter Property="BackgroundColor" Value="White"/>
         <Setter Property="StrokeShape" Value="RoundRectangle 15,15,15,15"/>
-        <Setter Property="Stroke" Value="Transparent"/>
     </Style>
     <Style TargetType="Label" x:Key="Headline">
         <Setter Property="TextColor" Value="White"/>
         <Setter Property="FontSize" Value="40"/>
-        <Setter Property="Padding" Value="0,25,0,25"/>
     </Style>
     <Style TargetType="Label" x:Key="SubHeadline">
-        <Setter Property="TextColor" Value="White"/>
         <Setter Property="FontSize" Value="24"/>
+        <Setter Property="TextColor" Value="#FF0000"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="Margin" Value="0,10,0,0"/>
     </Style>
-    <!--<Style TargetType="Border" x:Key="ImageBorder">
-        
-    </Style>-->
+    <Style TargetType="Entry" x:Key="Input">
+        <Setter Property="FontSize" Value="20"/>
+    </Style>
+    <Style TargetType="Button" x:Key="SaveButton">
+        <Setter Property="Background">
+            <Setter.Value>
+                <LinearGradientBrush EndPoint="1,0">
+                    <GradientStop Color="#C32424" Offset="0.1"/>
+                    <GradientStop Color="#2E0148" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="CornerRadius" Value="25"/>
+        <Setter Property="FontSize" Value="20"/>
+    </Style>
+    <Style TargetType="Button" x:Key="LogoutButton">
+        <Setter Property="BackgroundColor" Value="Red"/>
+        <Setter Property="CornerRadius" Value="25"/>
+        <Setter Property="FontSize" Value="20"/>
+    </Style>
     <Style TargetType="Border" x:Key="Footer">
         <Setter Property="BackgroundColor" Value="White"/>
         <Setter Property="Stroke">
