--- a/MauiApp1/Resources/Styles/FindOrderStyle.xaml
+++ b/MauiApp1/Resources/Styles/FindOrderStyle.xaml
@@ -27,6 +27,9 @@
         <Setter Property="TextColor" Value="White"/>
         <Setter Property="FontSize" Value="24"/>
     </Style>
+    <Style TargetType="Border" x:Key="ImageBorder">
+        
+    </Style>
     <Style TargetType="Button" x:Key="TagOrdreButton">
         <Setter Property="WidthRequest" Value="130"/>
         <Setter Property="HorizontalOptions" Value="End"/>
