--- a/MauiApp1/Resources/Styles/InspectOrderStyle.xaml
+++ b/MauiApp1/Resources/Styles/InspectOrderStyle.xaml
@@ -24,11 +24,14 @@
     </Style>
     <Style TargetType="Label" x:Key="Headline">
         <Setter Property="Margin" Value="0,5,0,0"/>
-        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextColor" Value="Red"/>
     </Style>
     <Style TargetType="Label" x:Key="SubHeadline">
         <Setter Property="TextColor" Value="Black"/>
+    </Style>
+    <Style TargetType="Border" x:Key="ImageBorder">
+        
     </Style>
     <Style TargetType="Border" x:Key="Footer">
         <Setter Property="BackgroundColor" Value="White"/>
