--- a/MauiApp1/Views/InspectOrder.xaml
+++ b/MauiApp1/Views/InspectOrder.xaml
@@ -15,7 +15,7 @@
     </ContentPage.Resources>
     <Grid Style="{StaticResource Background}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="70"/>
+            <RowDefinition Height="100"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="10"/>
             <RowDefinition Height="70"/>
@@ -25,26 +25,28 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="1" Text="{Binding description}" Style="{StaticResource description}"/>
+        <Label Grid.Row="0" Grid.Column="1" Text="{Binding description}" Style="{StaticResource description}" LineBreakMode="WordWrap"/>
         <VerticalStackLayout Grid.Row="1" Grid.Column="1">
             <Border Style="{StaticResource BorderBackground}">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="250"/>
                         <RowDefinition Height="10"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="40"/>
+                        <RowDefinition Height="30"/>
                         <RowDefinition Height="20"/>
-                        <RowDefinition Height="50"/>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition Height="20"/>
+                        <RowDefinition Height="20"/>
                         <RowDefinition Height="40"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -52,9 +54,9 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="10"/>
                     </Grid.ColumnDefinitions>
-                    <!--<Border Grid.ColumnSpan="3" Grid.Row="0" Style="{StaticResource ImageBorder}">
-                        <Image Source="" Aspect="Fill"/>
-                    </Border>-->
+                    <Border Grid.ColumnSpan="3" Grid.Row="0" Style="{StaticResource ImageBorder}">
+                        <Image Source="{Binding imageurl}" Aspect="Fill"/>
+                    </Border>
                     <Label Grid.Row="2" Grid.Column="1" Text="Fra" Style="{StaticResource Headline}"/>
                     <Label Grid.Row="3" Grid.Column="1" Text="{Binding from}" Style="{StaticResource SubHeadline}"/>
                     <Border Grid.Row="4" Grid.Column="1" StrokeShape="Line 0 0, 500 0" StrokeThickness="2"/>
@@ -73,8 +75,11 @@
                     <Label Grid.Row="12" Grid.Column="1" Text="Navn på ejer" Style="{StaticResource Headline}"/>
                     <Label Grid.Row="13" Grid.Column="1" Text="{Binding name}" Style="{StaticResource SubHeadline}"/>
                     <Border Grid.Row="14" Grid.Column="1" StrokeShape="Line 0 0, 500 0" StrokeThickness="2"/>
-                    <Button Grid.Row="15" Grid.Column="1" Text="Anmeld ejern" WidthRequest="140" HorizontalOptions="Start" Style="{StaticResource Button}" Command="{Binding report}"/>
-                    <Button Grid.Row="15" Grid.Column="1" Text="Er Varen Leveret" WidthRequest="140" HorizontalOptions="End" Style="{StaticResource Button}" Command="{Binding complete}"/>
+                    <Label Grid.Row="14" Grid.Column="1" Text="Telefonnummer" Style="{StaticResource Headline}"/>
+                    <Label Grid.Row="15" Grid.Column="1" Text="{Binding number}" Style="{StaticResource SubHeadline}"/>
+                    <Border Grid.Row="16" Grid.Column="1" StrokeShape="Line 0 0, 500 0" StrokeThickness="2"/>
+                    <Button Grid.Row="17" Grid.Column="1" Text="Anmeld ejern" WidthRequest="140" HorizontalOptions="Start" Style="{StaticResource Button}" Command="{Binding report}"/>
+                    <Button Grid.Row="17" Grid.Column="1" Text="Er Varen Leveret" WidthRequest="140" HorizontalOptions="End" Style="{StaticResource Button}" Command="{Binding complete}"/>
                 </Grid>
             </Border>
         </VerticalStackLayout>
