--- a/MauiApp1/Resources/Styles/CreateRatingsStyle.xaml
+++ b/MauiApp1/Resources/Styles/CreateRatingsStyle.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Resources.Styles.SignupStyle">
-    
+             x:Class="MauiApp1.Resources.Styles.CreateRatingsStyle">
+
     <Style TargetType="Grid" x:Key="Background">
         <Setter Property="Background">
             <Setter.Value>
@@ -13,24 +13,25 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style TargetType="Border" x:Key="BorderBackground">
+        <Setter Property="BackgroundColor" Value="White"/>
+        <Setter Property="StrokeShape" Value="RoundRectangle 15,15,15,15"/>
+    </Style>
     <Style TargetType="Label" x:Key="Headline">
         <Setter Property="TextColor" Value="White"/>
         <Setter Property="FontSize" Value="40"/>
-        <Setter Property="Padding" Value="40"/>
-    </Style>
-    <Style TargetType="Border" x:Key="LoginBackground">
-        <Setter Property="BackgroundColor" Value="White"/>
-        <Setter Property="StrokeShape" Value="RoundRectangle 50,50,0,0"/>
+        <Setter Property="Padding" Value="0,25,0,0"/>
     </Style>
     <Style TargetType="Label" x:Key="SubHeadline">
         <Setter Property="FontSize" Value="24"/>
-        <Setter Property="TextColor" Value="#FF0000"/>
+        <Setter Property="TextColor" Value="Red"/>
         <Setter Property="Padding" Value="0"/>
+        <Setter Property="Margin" Value="10,10,10,0"/>
     </Style>
-    <Style TargetType="Entry" x:Key="Input">
-        <Setter Property="FontSize" Value="20"/>
+    <Style TargetType="ImageButton" x:Key="Rating">
+        <Setter Property="WidthRequest" Value="40"/>
     </Style>
-    <Style TargetType="Button" x:Key="SignupButton">
+    <Style TargetType="Button" x:Key="Report">
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush EndPoint="1,0">
@@ -41,13 +42,24 @@
         </Setter>
         <Setter Property="CornerRadius" Value="25"/>
         <Setter Property="FontSize" Value="20"/>
-    </Style>
-    <Style TargetType="Label" x:Key="Account">
         <Setter Property="Margin" Value="10,0,10,0"/>
     </Style>
-    <Style TargetType="Label" x:Key="LoginButton">
-        <Setter Property="FontSize" Value="18"/>
-        <Setter Property="TextDecorations" Value="Underline"/>
-        <Setter Property="Margin" Value="10,0,10,0"/>
+    <Style TargetType="Border" x:Key="Footer">
+        <Setter Property="BackgroundColor" Value="White"/>
+        <Setter Property="Stroke">
+            <Setter.Value>
+                <LinearGradientBrush EndPoint="1,0">
+                    <GradientStop Color="#2E0148" Offset="0.1"/>
+                    <GradientStop Color="#C32424" Offset="1.0"/>
+                </LinearGradientBrush>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="StrokeShape" Value="RoundRectangle 75,75,0,0"/>
+        <Setter Property="StrokeThickness" Value="4"/>
+    </Style>
+    <Style TargetType="Button" x:Key="FooterButton">
+        <Setter Property="BackgroundColor" Value="White"/>
+        <Setter Property="Padding" Value="20"/>
+        <Setter Property="Margin" Value="0"/>
     </Style>
 </ResourceDictionary>
