--- a/MauiApp1/Resources/Styles/FindOrderPopUpStyle.xaml
+++ b/MauiApp1/Resources/Styles/FindOrderPopUpStyle.xaml
@@ -7,19 +7,28 @@
         <Setter Property="StrokeShape" Value="RoundRectangle 15,15,15,15"/>
     </Style>
     <Style TargetType="Label" x:Key="Headline">
+        
         <Setter Property="TextColor" Value="Black"/>
         <Setter Property="FontSize" Value="24"/>
-        <Setter Property="Padding" Value="0,25,0,25"/>
+        <Setter Property="Margin" Value="10"/>
         <Setter Property="HorizontalTextAlignment" Value="Start"/>
     </Style>
     <Style TargetType="Label" x:Key="SubHeadline">
+        <Setter Property="Margin" Value="10,0,10,0"/>
+        <Setter Property="VerticalOptions" Value="End"/>
+        <Setter Property="Padding" Value="0"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="TextColor" Value="Red"/>
         <Setter Property="HorizontalTextAlignment" Value="Start"/>
+    </Style>
+    <Style TargetType="Entry" x:Key="NewPrice">
+        <Setter Property="Margin" Value="10,0,10,0"/>
+        <Setter Property="VerticalOptions" Value="Start"/>
     </Style>
     <Style TargetType="Button" x:Key="Buttons">
         <Setter Property="CornerRadius" Value="25"/>
         <Setter Property="Padding" Value="5"/>
-        <Setter Property="Margin" Value="0,5,0,5"/>
+        <Setter Property="Margin" Value="10"/>
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush EndPoint="1,0">
