--- a/MauiApp1/Resources/Styles/RatingsStyle.xaml
+++ b/MauiApp1/Resources/Styles/RatingsStyle.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiApp1.Resources.Styles.SettingsStyle">
-
+             x:Class="MauiApp1.Resources.Styles.RatingsStyle">
     <Style TargetType="Grid" x:Key="Background">
         <Setter Property="Background">
             <Setter.Value>
@@ -23,32 +22,16 @@
         <Setter Property="Padding" Value="0,25,0,0"/>
     </Style>
     <Style TargetType="Label" x:Key="SubHeadline">
-        <Setter Property="FontSize" Value="24"/>
-        <Setter Property="TextColor" Value="#FF0000"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="TextColor" Value="Black"/>
         <Setter Property="Padding" Value="0"/>
-        <Setter Property="Margin" Value="0,10,0,0"/>
+        <Setter Property="Margin" Value="10"/>
     </Style>
-    <Style TargetType="Entry" x:Key="Input">
-        <Setter Property="FontSize" Value="20"/>
+    <Style TargetType="ImageButton" x:Key="Rating">
+        <Setter Property="WidthRequest" Value="40"/>
     </Style>
-    <Style TargetType="Button" x:Key="SaveButton">
-        <Setter Property="Background">
-            <Setter.Value>
-                <LinearGradientBrush EndPoint="1,0">
-                    <GradientStop Color="#C32424" Offset="0.1"/>
-                    <GradientStop Color="#2E0148" Offset="1.0"/>
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="CornerRadius" Value="25"/>
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
-    </Style>
-    <Style TargetType="Button" x:Key="LogoutButton">
-        <Setter Property="BackgroundColor" Value="Red"/>
-        <Setter Property="CornerRadius" Value="25"/>
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="Margin" Value="0,0,0,10"/>
+    <Style TargetType="Label" x:Key="from">
+        <Setter Property="Margin" Value="10"/>
     </Style>
     <Style TargetType="Border" x:Key="Footer">
         <Setter Property="BackgroundColor" Value="White"/>
