--- a/BlazorWebsite/Components/_Imports.razor
+++ b/BlazorWebsite/Components/_Imports.razor
@@ -8,5 +8,7 @@
 @using Microsoft.JSInterop
 @using BlazorWebsite
 @using BlazorWebsite.Components
+@using Components;
+@using FrontendModels;
 @inject IJSRuntime JS
 @inject NavigationManager navigationManager
