--- a/BlazorWebsite/Components/Pages/UpdateOrder.razor
+++ b/BlazorWebsite/Components/Pages/UpdateOrder.razor
@@ -3,6 +3,13 @@
 
 <PageTitle>Redigere ordre</PageTitle>
 
+@if (updateFailed)
+{
+    <div class="alert alert-danger" role="alert">
+        <p>@errorMsg</p>
+    </div>
+}
+
 <div class="container">
     <div class="header">
         <h2 class="header-text">Opret en ordre</h2>
